# engine_renderer

./: Cargo.toml  LICENSE  README.md  cargo.toml  yee
res/shaders/: color.glsl  cube.glsl  font.glsl  shape.glsl  shape_batch.glsl  texture.glsl  tile.glsl
res/shaders/graphics/: shape.glsl  shape2d.glsl  shape3d.glsl  sprite.glsl  sprite2d.glsl  sprite3d.glsl  test.glsl
res/shaders/graphics/old/: ellipse.glsl  general_textures.glsl  line.glsl  rect.glsl  sprite.glsl
src/: batch.rs  buffer.rs  color.rs  font.rs  framebuffer.rs  graphics.rs  graphics3d.rs  lib.rs  log.rs  macros.rs  matrix.rs  renderer.rs  shader.rs  shape.rs  texture.rs  vector.rs  window.rs
